--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,10 @@
 }
 
 .header {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  background-color: var(--main-background);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 100;
 }
 
 .header h1 {
@@ -41,8 +44,31 @@
 }
 
 .app {
+  margin-top: 50px;
+  padding-top: 15px;
+}
+
+.input,
+.output {
   width: 500px;
   @media (width < 600px) {
     width: 90vw;
   }
+}
+
+.footer {
+  z-index: 100;
+  background-color: var(--main-background);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+  /* height: 25px; */
+  font-size: 20px;
+  width: 25px;
+}
+
+.footer i {
+  opacity: 0.5;
+}
+
+.footer i:hover {
+  opacity: 1;
 }
