still need to do major work with clickable section

--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,15 @@
 .input,
 .output {
   width: 500px;
+
   @media (width < 600px) {
     width: 90vw;
   }
+}
+
+.output,
+.info {
+  padding-top: 50px;
 }
 
 .footer {
