--- a/src/extra.css
+++ b/src/extra.css
@@ -9,7 +9,7 @@
 
 .output-divs {
   text-align: left;
-  background-color: black;
+  background-color: transparent;
   margin-top: 10px;
   margin-bottom: 10px;
   box-shadow: none;
